<resources>
    <string name="app_name">Car Shield</string>
    <string name="version">Версия программы 1.00.20</string>
    <string name="pb_showPaired">Показать\nспаренные</string>
    <string name="tvConnectionState">Соединение отсутствует</string>
    <string name="hintTextEdit1">Введите телефон</string>
    <string name="scan_mode_on">Вкл. режим\ncканирования</string>
    <string name="scan_mode_off">Принять\nданные</string>
    <string name="green">Передать\nданные</string>
    <string name="desc1">Кнопка с рисунком</string>
    <string name="about_text">Список спаренных телефонов:\n</string>
    <string name="about_title">О программе</string>
    <string name="intent_title">Передача действий</string>
    <string name="intent_text">Это то что было</string>
    <string name="hint_tv_address">Куда передать</string>
    <string name="pb_Discovery">Поиск\nустройств</string>
    <string name="pbConnect">Connect</string>
    <string name="connnectionOK">Соединение установлено</string>
    <string name="connnectionERR">Ошибка подключения</string>
    <string name="initRequest">Запрос соединения</string>
    <string name="transmitionError">Ошибка передачи</string>
    <string name="recieveError">Ошибка получения данных</string>
    <string name="Recieve">Получено:</string>
    <string name="action_settings">Настройки</string>
    <string name="action_settings_new">Настройки новые</string>
    <string name="action_clear_main_listview">Очистить список</string>
    <string name="action_connect">Соединение с сигнализацией</string>
    <string name="ivCarDescription">Car</string>
    <string name="tvOutTemperature">+20°C</string>
    <string name="outTemperature">+25°C</string>
    <string name="base_name">имя базового\nблока</string>
    <string name="settings">Выберите устройство для подключения</string>
    <string name="title_in">Состояние дискретных входов</string>
    <string name="title_can">Состояние входов CAN</string>
    <string name="title_analog_in">Состояние аналоговых входов</string>
    <string name="title_temperature">Температура - </string>
    <string name="title_battery">Напряжение батарейки - </string>
    <string name="title_car_battery">Напряжение аккумулятора - </string>
    <string name="title_out">Состояние выходов</string>
    <string name="radioButtomSize">16</string>
    <string name="save">Сохранить</string>
    <string name="noBoundedDevice">Устройство для связи не выбрано.</string>
    <string name="ibOpenDescription">Open</string>
    <string name="ibCloseDescription">Close</string>
    <string name="ibMuteDescription">Mute</string>
    <string name="ibBagageDescription">Bagage</string>
    <string name="ivSigStateDescription">SigState</string>
    <string name="сonnectionStoped">Поиск сигнализации остановлен</string>
    <string name="connectionStart">Запущен поиск сигнализации</string>
    <string name="connectionImpossible">Поиск сигнализации невозможен</string>
    <string name="connectionError">Ошибка установления связи</string>
    <string name="connectionActiv">Соединение уже активно</string>
    <string name="connectionInterrupted">Соединение разорвано</string>
    <string name="connectionFailed">Соединение с сигнализацией отсутствует</string>
    <string name="ctvAutoConnect">Автоматическое подключение</string>
    <string name="pbInOutCancel">Отмена</string>
    <string name="pbInOutSave">Сохранить</string>
    <string name="pbPrevious">Назад</string>
    <string name="pbNext">Далее</string>
    <string name="swOff">OFF</string>
    <string name="swOn">ON</string>
    <string name="outOnTimeBegin">"Включен выход "</string>
    <string name="outOff">"Выключен выход "</string>
    <string name="outOnTimeEnd">" по времени"</string>
    <string name="daOutState">Состояние выходов</string>
    <string name="daOutQuestion">Что делать с включенными выходами?</string>
    <string name="daOutAnswerOn">Оставить включенными</string>
    <string name="daOutAnswerOff">Выключить</string>
    <string name="RSSI">0dB</string>
    <string name="iv_analog_description">ivAnalogInStatus</string>
    <string name="ivinoutitem">ivInOutItem</string>
    <string name="daTimeOff">Укажите какое время вход будет выключен</string>
    <string name="action_sound_off_mode">Режим \"Без звука\"</string>
    <string name="action_sound_on_mode">Режим \"Звуковой\"</string>
    <string name="sound_off_mode_setted">Включен режим \"Без звука\" для установки и снятия с охраны"</string>
    <string name="sound_on_mode_setted">Включен \"Звуковой\" режим для установки и снятия с охраны</string>
    <string name="degries">°C</string>
    <string name="volts"> В</string>
    <string name="preferences">Настройки</string>
    <string name="PairedDevicesList">Устройство для подключения</string>
    <string name="checkDevice">Выберите устройство</string>
    <string name="cbAutoConnectFlag">Автоматическое соединение</string>
    <string name="cbAutoConnectFlagSummary">Вкл/выкл</string>
    <string name="listPrefPairedDevices">listPrefPairedDevices</string>
    <string name="cbAutoConnect">cbAutoConnect</string>
    <string name="noValidBoundedDevice">Невозможно установить связь с данным устройсвом</string>
    <string name="errorInputPack">Ошибка в пакете INPUT</string>
    <string name="save_ok">Названия сохранены</string>

</resources>