<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitleAnalogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_analog_in"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <LinearLayout
        android:id="@+id/llListViewAnalogIn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleAnalogIn"
        app:layout_constraintBottom_toTopOf="@+id/pbAnalogInSave"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <!-- разрешаем фокус для потомков ListView-->
        <ListView
            android:id="@+id/lvAnalogIn"
            android:descendantFocusability="afterDescendants"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>
    </LinearLayout>

    <Button
        android:id="@+id/pbAnalogPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pbPrevious"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/pbAnalogInSave"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/pbAnalogInSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pbInOutSave"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/pbAnalogNext"
        app:layout_constraintLeft_toRightOf="@+id/pbAnalogPrevious"
        />

    <Button
        android:id="@+id/pbAnalogNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pbNext"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/pbAnalogInSave"
        />
</android.support.constraint.ConstraintLayout>